argocd/kustomize/base/neuvector-httproute/neuvector-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: neuvector-httproute
  namespace: cattle-neuvector-system
spec:
  hostnames:
  - "nv.rajesh-kumar.in"
  parentRefs:
  - name: rancher-server-gateway
    namespace: cilium-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: neuvector-service-webui 
      port: 8443
