argocd/kustomize/base/neuvector-httproute/neuvector-tls-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: neuvector-tls
  namespace: cattle-neuvector-system
spec:
  host: neuvector-service-webui.cattle-neuvector-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
      credentialName: backend-ca
      sni: neuvector 
      insecureSkipVerify: false
