argocd/kustomize/base/neuvector-httproute/neuvector-tls.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: nv-tls-route
  namespace: cattle-neuvector-system
spec:
  hostnames:
  - nv.rajesh-kumar.in
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: common-server-gateway-istio 
    namespace: common-gateway
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: neuvector-service-webui 
      port: 8443
